RESOLVED FIXED274517
CanvasBase::makeRenderingResultsAvailable is not called consistently
https://bugs.webkit.org/show_bug.cgi?id=274517
Summary CanvasBase::makeRenderingResultsAvailable is not called consistently
Kimmo Kinnunen
Reported 2024-05-22 04:05:37 PDT
CanvasBase::makeRenderingResultsAvailable is not called consistently
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-22 04:05:48 PDT
Kimmo Kinnunen
Comment 2 2024-05-22 04:20:32 PDT
EWS
Comment 3 2024-05-22 23:51:37 PDT
Committed 279184@main (c83035adb300): <https://commits.webkit.org/279184@main> Reviewed commits have been landed. Closing PR #28907 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.